contact , Project tech stake added and skills overflow is resolved

--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,9 @@
 .skill {
   writing-mode: vertical-lr;
 }
+
+@layer utilities {
+  .hide-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+}
